--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.7"
   }
 }
