--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "google-search-results-nodejs": "^2.0.1",
+    "images-scraper": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.7"
