--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "google-search-results-nodejs": "^2.0.1",
     "images-scraper": "^5.0.7",
+    "jquery.maskedinput": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.7",
